[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/ColumnSprite.png" type="Texture" id=1]
[ext_resource path="res://scripts/column.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9696, 76.9767 )

[node name="Column" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Up_part" type="Sprite" parent="."]
light_mask = -2147483646
position = Vector2( 0, -328.844 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
flip_v = true
__meta__ = {
"_edit_group_": true
}

[node name="Down_part" type="Sprite" parent="."]
position = Vector2( 0, 341.103 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.46872, 9.1523 )
scale = Vector2( 3.85437, 11.3401 )

[node name="ChangePosTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -428, -351.121 )
polygon = PoolVector2Array( 397.498, 277.886, 460.053, 277.886, 462.3, 251.291, 448.82, 249.02, 449.19, -234.753, 407.237, -234.378, 406.346, 248.784, 394.502, 252.041 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( -428, -328.201 )
scale = Vector2( 1, 0.997281 )
polygon = PoolVector2Array( 391.147, 414.339, 463.254, 413.707, 464.305, 443.008, 449.008, 443.664, 449.72, 926.279, 406.314, 926.873, 403.905, 443.458, 391.147, 442.797 )

[node name="ScoredDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoredDetector"]
position = Vector2( 0, 7.55952 )
shape = SubResource( 1 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ChangePosTimer" to="." method="_on_ChangePosTimer_timeout"]
[connection signal="body_entered" from="ScoredDetector" to="." method="_on_ScoredDetector_body_entered"]
